--- a/index.html
+++ b/index.html
@@ -103,14 +103,12 @@
                         class="Projects-section new-section"
                     >
                         <h1 class="section-heading">Projects</h1>
-                        <h1 class="experienceh1"><b>Tic Tac Toe Game in Java</b>
+                        <h1 class="experienceh1"><b>Customer Relationship Management</b>
                         </h1>
                         <ul>
-                            <li><h3> This is a Java-based Tic-Tac-Toe game. It's a text-based, 2-player game running in an IDE console environment.
+                            <li><h3> This is a python-based Application of Customer Relationship Management Model for marc Lab.
                             </h3></li>
-                            <li><h3>I have used concepts like Function variables, input and output conditionals, and loops  in detail, as well as the concept of the 2D Array and OOPs.
-                            </h3></li>
-                            <li><h3>Tech stack used : Core Java ,LLD,OOPs.</b></h3></li>
+                            <li><h3>Tech stack used : Core python, Django, HTML, CSS, JavaScript, Sqlite DB</b></h3></li>
                         </ul>
                         <br>
                         <h1 class="experienceh1"> <b> Snakes Ladders Game in Java </b></h1>
